parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> suite
Rule 1     suite -> stmt
Rule 2     suite -> stmt suite
Rule 3     stmt -> exprStmt
Rule 4     stmt -> declar
Rule 5     stmt -> call SEMCOL
Rule 6     stmt -> selectionStmt
Rule 7     stmt -> iterationStmt
Rule 8     stmt -> returnStmt SEMCOL
Rule 9     stmt -> inputStmt SEMCOL
Rule 10    stmt -> outputStmt SEMCOL
Rule 11    stmt -> commentLine
Rule 12    declar -> varDeclar SEMCOL
Rule 13    declar -> funcDeclar
Rule 14    declar -> objDeclar
Rule 15    varDeclar -> NAME ASSIGN STRING
Rule 16    varDeclar -> NAME ASSIGN exprStmt
Rule 17    varDeclar -> NAME ASSIGN inputStmt
Rule 18    funcDeclar -> DEF NAME LPARENT RPARENT COL suite
Rule 19    funcDeclar -> DEF NAME LPARENT params RPARENT COL suite
Rule 20    params -> paramsList
Rule 21    paramsList -> NAME COMA paramsList
Rule 22    paramsList -> NAME
Rule 23    objDeclar -> CLASS NAME COL suite
Rule 24    call -> NAME
Rule 25    call -> NAME POINT call
Rule 26    call -> NAME LPARENT RPARENT
Rule 27    call -> NAME LPARENT params RPARENT
Rule 28    call -> call POINT call
Rule 29    exprStmt -> simpleExpr
Rule 30    selectionStmt -> IF simpleExpr COL suite
Rule 31    selectionStmt -> IF simpleExpr COL suite ELSE COL suite
Rule 32    iterationStmt -> WHILE simpleExpr COL suite
Rule 33    returnStmt -> RETURN
Rule 34    returnStmt -> RETURN simpleExpr
Rule 35    simpleExpr -> simpleExpr OR andExpr
Rule 36    simpleExpr -> andExpr
Rule 37    andExpr -> andExpr AND unaryRelExpr
Rule 38    andExpr -> unaryRelExpr
Rule 39    unaryRelExpr -> NOT unaryRelExpr
Rule 40    unaryRelExpr -> relExpr
Rule 41    relExpr -> sumExpr relop sumExpr
Rule 42    relExpr -> sumExpr
Rule 43    relop -> LTE
Rule 44    relop -> LT
Rule 45    relop -> GTE
Rule 46    relop -> GT
Rule 47    relop -> EQ
Rule 48    relop -> NEQ
Rule 49    sumExpr -> sumExpr sumop term
Rule 50    sumExpr -> term
Rule 51    sumop -> SUM
Rule 52    sumop -> SUBST
Rule 53    term -> term mulop opElement
Rule 54    term -> opElement
Rule 55    opElement -> call
Rule 56    opElement -> NUMBER
Rule 57    mulop -> PROD
Rule 58    mulop -> DIV
Rule 59    inputStmt -> INPUT LPARENT RPARENT
Rule 60    outputStmt -> PRINT LPARENT STRING RPARENT
Rule 61    outputStmt -> PRINT LPARENT NAME RPARENT
Rule 62    commentLine -> LINE_COMMENT

Terminals, with rules where they appear

AND                  : 37
ASSIGN               : 15 16 17
CLASS                : 23
COL                  : 18 19 23 30 31 31 32
COMA                 : 21
DEF                  : 18 19
DIV                  : 58
ELSE                 : 31
EQ                   : 47
GT                   : 46
GTE                  : 45
IF                   : 30 31
INPUT                : 59
LINE_COMMENT         : 62
LPARENT              : 18 19 26 27 59 60 61
LT                   : 44
LTE                  : 43
NAME                 : 15 16 17 18 19 21 22 23 24 25 26 27 61
NEQ                  : 48
NOT                  : 39
NUMBER               : 56
OR                   : 35
POINT                : 25 28
PRINT                : 60 61
PROD                 : 57
RETURN               : 33 34
RPARENT              : 18 19 26 27 59 60 61
SEMCOL               : 5 8 9 10 12
STRING               : 15 60
SUBST                : 52
SUM                  : 51
WHILE                : 32
error                : 

Nonterminals, with rules where they appear

andExpr              : 35 36 37
call                 : 5 25 28 28 55
commentLine          : 11
declar               : 4
exprStmt             : 3 16
funcDeclar           : 13
inputStmt            : 9 17
iterationStmt        : 7
mulop                : 53
objDeclar            : 14
opElement            : 53 54
outputStmt           : 10
params               : 19 27
paramsList           : 20 21
relExpr              : 40
relop                : 41
returnStmt           : 8
selectionStmt        : 6
simpleExpr           : 29 30 31 32 34 35
stmt                 : 1 2
suite                : 2 18 19 23 30 31 31 32 0
sumExpr              : 41 41 42 49
sumop                : 49
term                 : 49 50 53
unaryRelExpr         : 37 38 39
varDeclar            : 12

Parsing method: LALR

state 0

    (0) S' -> . suite
    (1) suite -> . stmt
    (2) suite -> . stmt suite
    (3) stmt -> . exprStmt
    (4) stmt -> . declar
    (5) stmt -> . call SEMCOL
    (6) stmt -> . selectionStmt
    (7) stmt -> . iterationStmt
    (8) stmt -> . returnStmt SEMCOL
    (9) stmt -> . inputStmt SEMCOL
    (10) stmt -> . outputStmt SEMCOL
    (11) stmt -> . commentLine
    (29) exprStmt -> . simpleExpr
    (12) declar -> . varDeclar SEMCOL
    (13) declar -> . funcDeclar
    (14) declar -> . objDeclar
    (24) call -> . NAME
    (25) call -> . NAME POINT call
    (26) call -> . NAME LPARENT RPARENT
    (27) call -> . NAME LPARENT params RPARENT
    (28) call -> . call POINT call
    (30) selectionStmt -> . IF simpleExpr COL suite
    (31) selectionStmt -> . IF simpleExpr COL suite ELSE COL suite
    (32) iterationStmt -> . WHILE simpleExpr COL suite
    (33) returnStmt -> . RETURN
    (34) returnStmt -> . RETURN simpleExpr
    (59) inputStmt -> . INPUT LPARENT RPARENT
    (60) outputStmt -> . PRINT LPARENT STRING RPARENT
    (61) outputStmt -> . PRINT LPARENT NAME RPARENT
    (62) commentLine -> . LINE_COMMENT
    (35) simpleExpr -> . simpleExpr OR andExpr
    (36) simpleExpr -> . andExpr
    (15) varDeclar -> . NAME ASSIGN STRING
    (16) varDeclar -> . NAME ASSIGN exprStmt
    (17) varDeclar -> . NAME ASSIGN inputStmt
    (18) funcDeclar -> . DEF NAME LPARENT RPARENT COL suite
    (19) funcDeclar -> . DEF NAME LPARENT params RPARENT COL suite
    (23) objDeclar -> . CLASS NAME COL suite
    (37) andExpr -> . andExpr AND unaryRelExpr
    (38) andExpr -> . unaryRelExpr
    (39) unaryRelExpr -> . NOT unaryRelExpr
    (40) unaryRelExpr -> . relExpr
    (41) relExpr -> . sumExpr relop sumExpr
    (42) relExpr -> . sumExpr
    (49) sumExpr -> . sumExpr sumop term
    (50) sumExpr -> . term
    (53) term -> . term mulop opElement
    (54) term -> . opElement
    (55) opElement -> . call
    (56) opElement -> . NUMBER

    NAME            shift and go to state 16
    IF              shift and go to state 17
    WHILE           shift and go to state 18
    RETURN          shift and go to state 19
    INPUT           shift and go to state 20
    PRINT           shift and go to state 21
    LINE_COMMENT    shift and go to state 22
    DEF             shift and go to state 24
    CLASS           shift and go to state 25
    NOT             shift and go to state 27
    NUMBER          shift and go to state 32

    suite                          shift and go to state 1
    stmt                           shift and go to state 2
    exprStmt                       shift and go to state 3
    declar                         shift and go to state 4
    call                           shift and go to state 5
    selectionStmt                  shift and go to state 6
    iterationStmt                  shift and go to state 7
    returnStmt                     shift and go to state 8
    inputStmt                      shift and go to state 9
    outputStmt                     shift and go to state 10
    commentLine                    shift and go to state 11
    simpleExpr                     shift and go to state 12
    varDeclar                      shift and go to state 13
    funcDeclar                     shift and go to state 14
    objDeclar                      shift and go to state 15
    andExpr                        shift and go to state 23
    unaryRelExpr                   shift and go to state 26
    relExpr                        shift and go to state 28
    sumExpr                        shift and go to state 29
    term                           shift and go to state 30
    opElement                      shift and go to state 31

state 1

    (0) S' -> suite .



state 2

    (1) suite -> stmt .
    (2) suite -> stmt . suite
    (1) suite -> . stmt
    (2) suite -> . stmt suite
    (3) stmt -> . exprStmt
    (4) stmt -> . declar
    (5) stmt -> . call SEMCOL
    (6) stmt -> . selectionStmt
    (7) stmt -> . iterationStmt
    (8) stmt -> . returnStmt SEMCOL
    (9) stmt -> . inputStmt SEMCOL
    (10) stmt -> . outputStmt SEMCOL
    (11) stmt -> . commentLine
    (29) exprStmt -> . simpleExpr
    (12) declar -> . varDeclar SEMCOL
    (13) declar -> . funcDeclar
    (14) declar -> . objDeclar
    (24) call -> . NAME
    (25) call -> . NAME POINT call
    (26) call -> . NAME LPARENT RPARENT
    (27) call -> . NAME LPARENT params RPARENT
    (28) call -> . call POINT call
    (30) selectionStmt -> . IF simpleExpr COL suite
    (31) selectionStmt -> . IF simpleExpr COL suite ELSE COL suite
    (32) iterationStmt -> . WHILE simpleExpr COL suite
    (33) returnStmt -> . RETURN
    (34) returnStmt -> . RETURN simpleExpr
    (59) inputStmt -> . INPUT LPARENT RPARENT
    (60) outputStmt -> . PRINT LPARENT STRING RPARENT
    (61) outputStmt -> . PRINT LPARENT NAME RPARENT
    (62) commentLine -> . LINE_COMMENT
    (35) simpleExpr -> . simpleExpr OR andExpr
    (36) simpleExpr -> . andExpr
    (15) varDeclar -> . NAME ASSIGN STRING
    (16) varDeclar -> . NAME ASSIGN exprStmt
    (17) varDeclar -> . NAME ASSIGN inputStmt
    (18) funcDeclar -> . DEF NAME LPARENT RPARENT COL suite
    (19) funcDeclar -> . DEF NAME LPARENT params RPARENT COL suite
    (23) objDeclar -> . CLASS NAME COL suite
    (37) andExpr -> . andExpr AND unaryRelExpr
    (38) andExpr -> . unaryRelExpr
    (39) unaryRelExpr -> . NOT unaryRelExpr
    (40) unaryRelExpr -> . relExpr
    (41) relExpr -> . sumExpr relop sumExpr
    (42) relExpr -> . sumExpr
    (49) sumExpr -> . sumExpr sumop term
    (50) sumExpr -> . term
    (53) term -> . term mulop opElement
    (54) term -> . opElement
    (55) opElement -> . call
    (56) opElement -> . NUMBER

  ! shift/reduce conflict for NAME resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for INPUT resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for LINE_COMMENT resolved as shift
  ! shift/reduce conflict for DEF resolved as shift
  ! shift/reduce conflict for CLASS resolved as shift
  ! shift/reduce conflict for NOT resolved as shift
  ! shift/reduce conflict for NUMBER resolved as shift
    $end            reduce using rule 1 (suite -> stmt .)
    ELSE            reduce using rule 1 (suite -> stmt .)
    NAME            shift and go to state 16
    IF              shift and go to state 17
    WHILE           shift and go to state 18
    RETURN          shift and go to state 19
    INPUT           shift and go to state 20
    PRINT           shift and go to state 21
    LINE_COMMENT    shift and go to state 22
    DEF             shift and go to state 24
    CLASS           shift and go to state 25
    NOT             shift and go to state 27
    NUMBER          shift and go to state 32

  ! NAME            [ reduce using rule 1 (suite -> stmt .) ]
  ! IF              [ reduce using rule 1 (suite -> stmt .) ]
  ! WHILE           [ reduce using rule 1 (suite -> stmt .) ]
  ! RETURN          [ reduce using rule 1 (suite -> stmt .) ]
  ! INPUT           [ reduce using rule 1 (suite -> stmt .) ]
  ! PRINT           [ reduce using rule 1 (suite -> stmt .) ]
  ! LINE_COMMENT    [ reduce using rule 1 (suite -> stmt .) ]
  ! DEF             [ reduce using rule 1 (suite -> stmt .) ]
  ! CLASS           [ reduce using rule 1 (suite -> stmt .) ]
  ! NOT             [ reduce using rule 1 (suite -> stmt .) ]
  ! NUMBER          [ reduce using rule 1 (suite -> stmt .) ]

    stmt                           shift and go to state 2
    suite                          shift and go to state 33
    exprStmt                       shift and go to state 3
    declar                         shift and go to state 4
    call                           shift and go to state 5
    selectionStmt                  shift and go to state 6
    iterationStmt                  shift and go to state 7
    returnStmt                     shift and go to state 8
    inputStmt                      shift and go to state 9
    outputStmt                     shift and go to state 10
    commentLine                    shift and go to state 11
    simpleExpr                     shift and go to state 12
    varDeclar                      shift and go to state 13
    funcDeclar                     shift and go to state 14
    objDeclar                      shift and go to state 15
    andExpr                        shift and go to state 23
    unaryRelExpr                   shift and go to state 26
    relExpr                        shift and go to state 28
    sumExpr                        shift and go to state 29
    term                           shift and go to state 30
    opElement                      shift and go to state 31

state 3

    (3) stmt -> exprStmt .

    NAME            reduce using rule 3 (stmt -> exprStmt .)
    IF              reduce using rule 3 (stmt -> exprStmt .)
    WHILE           reduce using rule 3 (stmt -> exprStmt .)
    RETURN          reduce using rule 3 (stmt -> exprStmt .)
    INPUT           reduce using rule 3 (stmt -> exprStmt .)
    PRINT           reduce using rule 3 (stmt -> exprStmt .)
    LINE_COMMENT    reduce using rule 3 (stmt -> exprStmt .)
    DEF             reduce using rule 3 (stmt -> exprStmt .)
    CLASS           reduce using rule 3 (stmt -> exprStmt .)
    NOT             reduce using rule 3 (stmt -> exprStmt .)
    NUMBER          reduce using rule 3 (stmt -> exprStmt .)
    $end            reduce using rule 3 (stmt -> exprStmt .)
    ELSE            reduce using rule 3 (stmt -> exprStmt .)


state 4

    (4) stmt -> declar .

    NAME            reduce using rule 4 (stmt -> declar .)
    IF              reduce using rule 4 (stmt -> declar .)
    WHILE           reduce using rule 4 (stmt -> declar .)
    RETURN          reduce using rule 4 (stmt -> declar .)
    INPUT           reduce using rule 4 (stmt -> declar .)
    PRINT           reduce using rule 4 (stmt -> declar .)
    LINE_COMMENT    reduce using rule 4 (stmt -> declar .)
    DEF             reduce using rule 4 (stmt -> declar .)
    CLASS           reduce using rule 4 (stmt -> declar .)
    NOT             reduce using rule 4 (stmt -> declar .)
    NUMBER          reduce using rule 4 (stmt -> declar .)
    $end            reduce using rule 4 (stmt -> declar .)
    ELSE            reduce using rule 4 (stmt -> declar .)


state 5

    (5) stmt -> call . SEMCOL
    (28) call -> call . POINT call
    (55) opElement -> call .

    SEMCOL          shift and go to state 34
    POINT           shift and go to state 35
    PROD            reduce using rule 55 (opElement -> call .)
    DIV             reduce using rule 55 (opElement -> call .)
    LTE             reduce using rule 55 (opElement -> call .)
    LT              reduce using rule 55 (opElement -> call .)
    GTE             reduce using rule 55 (opElement -> call .)
    GT              reduce using rule 55 (opElement -> call .)
    EQ              reduce using rule 55 (opElement -> call .)
    NEQ             reduce using rule 55 (opElement -> call .)
    SUM             reduce using rule 55 (opElement -> call .)
    SUBST           reduce using rule 55 (opElement -> call .)
    AND             reduce using rule 55 (opElement -> call .)
    OR              reduce using rule 55 (opElement -> call .)
    NAME            reduce using rule 55 (opElement -> call .)
    IF              reduce using rule 55 (opElement -> call .)
    WHILE           reduce using rule 55 (opElement -> call .)
    RETURN          reduce using rule 55 (opElement -> call .)
    INPUT           reduce using rule 55 (opElement -> call .)
    PRINT           reduce using rule 55 (opElement -> call .)
    LINE_COMMENT    reduce using rule 55 (opElement -> call .)
    DEF             reduce using rule 55 (opElement -> call .)
    CLASS           reduce using rule 55 (opElement -> call .)
    NOT             reduce using rule 55 (opElement -> call .)
    NUMBER          reduce using rule 55 (opElement -> call .)
    $end            reduce using rule 55 (opElement -> call .)
    ELSE            reduce using rule 55 (opElement -> call .)


state 6

    (6) stmt -> selectionStmt .

    NAME            reduce using rule 6 (stmt -> selectionStmt .)
    IF              reduce using rule 6 (stmt -> selectionStmt .)
    WHILE           reduce using rule 6 (stmt -> selectionStmt .)
    RETURN          reduce using rule 6 (stmt -> selectionStmt .)
    INPUT           reduce using rule 6 (stmt -> selectionStmt .)
    PRINT           reduce using rule 6 (stmt -> selectionStmt .)
    LINE_COMMENT    reduce using rule 6 (stmt -> selectionStmt .)
    DEF             reduce using rule 6 (stmt -> selectionStmt .)
    CLASS           reduce using rule 6 (stmt -> selectionStmt .)
    NOT             reduce using rule 6 (stmt -> selectionStmt .)
    NUMBER          reduce using rule 6 (stmt -> selectionStmt .)
    $end            reduce using rule 6 (stmt -> selectionStmt .)
    ELSE            reduce using rule 6 (stmt -> selectionStmt .)


state 7

    (7) stmt -> iterationStmt .

    NAME            reduce using rule 7 (stmt -> iterationStmt .)
    IF              reduce using rule 7 (stmt -> iterationStmt .)
    WHILE           reduce using rule 7 (stmt -> iterationStmt .)
    RETURN          reduce using rule 7 (stmt -> iterationStmt .)
    INPUT           reduce using rule 7 (stmt -> iterationStmt .)
    PRINT           reduce using rule 7 (stmt -> iterationStmt .)
    LINE_COMMENT    reduce using rule 7 (stmt -> iterationStmt .)
    DEF             reduce using rule 7 (stmt -> iterationStmt .)
    CLASS           reduce using rule 7 (stmt -> iterationStmt .)
    NOT             reduce using rule 7 (stmt -> iterationStmt .)
    NUMBER          reduce using rule 7 (stmt -> iterationStmt .)
    $end            reduce using rule 7 (stmt -> iterationStmt .)
    ELSE            reduce using rule 7 (stmt -> iterationStmt .)


state 8

    (8) stmt -> returnStmt . SEMCOL

    SEMCOL          shift and go to state 36


state 9

    (9) stmt -> inputStmt . SEMCOL

    SEMCOL          shift and go to state 37


state 10

    (10) stmt -> outputStmt . SEMCOL

    SEMCOL          shift and go to state 38


state 11

    (11) stmt -> commentLine .

    NAME            reduce using rule 11 (stmt -> commentLine .)
    IF              reduce using rule 11 (stmt -> commentLine .)
    WHILE           reduce using rule 11 (stmt -> commentLine .)
    RETURN          reduce using rule 11 (stmt -> commentLine .)
    INPUT           reduce using rule 11 (stmt -> commentLine .)
    PRINT           reduce using rule 11 (stmt -> commentLine .)
    LINE_COMMENT    reduce using rule 11 (stmt -> commentLine .)
    DEF             reduce using rule 11 (stmt -> commentLine .)
    CLASS           reduce using rule 11 (stmt -> commentLine .)
    NOT             reduce using rule 11 (stmt -> commentLine .)
    NUMBER          reduce using rule 11 (stmt -> commentLine .)
    $end            reduce using rule 11 (stmt -> commentLine .)
    ELSE            reduce using rule 11 (stmt -> commentLine .)


state 12

    (29) exprStmt -> simpleExpr .
    (35) simpleExpr -> simpleExpr . OR andExpr

    NAME            reduce using rule 29 (exprStmt -> simpleExpr .)
    IF              reduce using rule 29 (exprStmt -> simpleExpr .)
    WHILE           reduce using rule 29 (exprStmt -> simpleExpr .)
    RETURN          reduce using rule 29 (exprStmt -> simpleExpr .)
    INPUT           reduce using rule 29 (exprStmt -> simpleExpr .)
    PRINT           reduce using rule 29 (exprStmt -> simpleExpr .)
    LINE_COMMENT    reduce using rule 29 (exprStmt -> simpleExpr .)
    DEF             reduce using rule 29 (exprStmt -> simpleExpr .)
    CLASS           reduce using rule 29 (exprStmt -> simpleExpr .)
    NOT             reduce using rule 29 (exprStmt -> simpleExpr .)
    NUMBER          reduce using rule 29 (exprStmt -> simpleExpr .)
    $end            reduce using rule 29 (exprStmt -> simpleExpr .)
    ELSE            reduce using rule 29 (exprStmt -> simpleExpr .)
    SEMCOL          reduce using rule 29 (exprStmt -> simpleExpr .)
    OR              shift and go to state 39


state 13

    (12) declar -> varDeclar . SEMCOL

    SEMCOL          shift and go to state 40


state 14

    (13) declar -> funcDeclar .

    NAME            reduce using rule 13 (declar -> funcDeclar .)
    IF              reduce using rule 13 (declar -> funcDeclar .)
    WHILE           reduce using rule 13 (declar -> funcDeclar .)
    RETURN          reduce using rule 13 (declar -> funcDeclar .)
    INPUT           reduce using rule 13 (declar -> funcDeclar .)
    PRINT           reduce using rule 13 (declar -> funcDeclar .)
    LINE_COMMENT    reduce using rule 13 (declar -> funcDeclar .)
    DEF             reduce using rule 13 (declar -> funcDeclar .)
    CLASS           reduce using rule 13 (declar -> funcDeclar .)
    NOT             reduce using rule 13 (declar -> funcDeclar .)
    NUMBER          reduce using rule 13 (declar -> funcDeclar .)
    $end            reduce using rule 13 (declar -> funcDeclar .)
    ELSE            reduce using rule 13 (declar -> funcDeclar .)


state 15

    (14) declar -> objDeclar .

    NAME            reduce using rule 14 (declar -> objDeclar .)
    IF              reduce using rule 14 (declar -> objDeclar .)
    WHILE           reduce using rule 14 (declar -> objDeclar .)
    RETURN          reduce using rule 14 (declar -> objDeclar .)
    INPUT           reduce using rule 14 (declar -> objDeclar .)
    PRINT           reduce using rule 14 (declar -> objDeclar .)
    LINE_COMMENT    reduce using rule 14 (declar -> objDeclar .)
    DEF             reduce using rule 14 (declar -> objDeclar .)
    CLASS           reduce using rule 14 (declar -> objDeclar .)
    NOT             reduce using rule 14 (declar -> objDeclar .)
    NUMBER          reduce using rule 14 (declar -> objDeclar .)
    $end            reduce using rule 14 (declar -> objDeclar .)
    ELSE            reduce using rule 14 (declar -> objDeclar .)


state 16

    (24) call -> NAME .
    (25) call -> NAME . POINT call
    (26) call -> NAME . LPARENT RPARENT
    (27) call -> NAME . LPARENT params RPARENT
    (15) varDeclar -> NAME . ASSIGN STRING
    (16) varDeclar -> NAME . ASSIGN exprStmt
    (17) varDeclar -> NAME . ASSIGN inputStmt

  ! shift/reduce conflict for POINT resolved as shift
    SEMCOL          reduce using rule 24 (call -> NAME .)
    PROD            reduce using rule 24 (call -> NAME .)
    DIV             reduce using rule 24 (call -> NAME .)
    LTE             reduce using rule 24 (call -> NAME .)
    LT              reduce using rule 24 (call -> NAME .)
    GTE             reduce using rule 24 (call -> NAME .)
    GT              reduce using rule 24 (call -> NAME .)
    EQ              reduce using rule 24 (call -> NAME .)
    NEQ             reduce using rule 24 (call -> NAME .)
    SUM             reduce using rule 24 (call -> NAME .)
    SUBST           reduce using rule 24 (call -> NAME .)
    AND             reduce using rule 24 (call -> NAME .)
    OR              reduce using rule 24 (call -> NAME .)
    NAME            reduce using rule 24 (call -> NAME .)
    IF              reduce using rule 24 (call -> NAME .)
    WHILE           reduce using rule 24 (call -> NAME .)
    RETURN          reduce using rule 24 (call -> NAME .)
    INPUT           reduce using rule 24 (call -> NAME .)
    PRINT           reduce using rule 24 (call -> NAME .)
    LINE_COMMENT    reduce using rule 24 (call -> NAME .)
    DEF             reduce using rule 24 (call -> NAME .)
    CLASS           reduce using rule 24 (call -> NAME .)
    NOT             reduce using rule 24 (call -> NAME .)
    NUMBER          reduce using rule 24 (call -> NAME .)
    $end            reduce using rule 24 (call -> NAME .)
    ELSE            reduce using rule 24 (call -> NAME .)
    POINT           shift and go to state 41
    LPARENT         shift and go to state 42
    ASSIGN          shift and go to state 43

  ! POINT           [ reduce using rule 24 (call -> NAME .) ]


state 17

    (30) selectionStmt -> IF . simpleExpr COL suite
    (31) selectionStmt -> IF . simpleExpr COL suite ELSE COL suite
    (35) simpleExpr -> . simpleExpr OR andExpr
    (36) simpleExpr -> . andExpr
    (37) andExpr -> . andExpr AND unaryRelExpr
    (38) andExpr -> . unaryRelExpr
    (39) unaryRelExpr -> . NOT unaryRelExpr
    (40) unaryRelExpr -> . relExpr
    (41) relExpr -> . sumExpr relop sumExpr
    (42) relExpr -> . sumExpr
    (49) sumExpr -> . sumExpr sumop term
    (50) sumExpr -> . term
    (53) term -> . term mulop opElement
    (54) term -> . opElement
    (55) opElement -> . call
    (56) opElement -> . NUMBER
    (24) call -> . NAME
    (25) call -> . NAME POINT call
    (26) call -> . NAME LPARENT RPARENT
    (27) call -> . NAME LPARENT params RPARENT
    (28) call -> . call POINT call

    NOT             shift and go to state 27
    NUMBER          shift and go to state 32
    NAME            shift and go to state 46

    simpleExpr                     shift and go to state 44
    andExpr                        shift and go to state 23
    unaryRelExpr                   shift and go to state 26
    relExpr                        shift and go to state 28
    sumExpr                        shift and go to state 29
    term                           shift and go to state 30
    opElement                      shift and go to state 31
    call                           shift and go to state 45

state 18

    (32) iterationStmt -> WHILE . simpleExpr COL suite
    (35) simpleExpr -> . simpleExpr OR andExpr
    (36) simpleExpr -> . andExpr
    (37) andExpr -> . andExpr AND unaryRelExpr
    (38) andExpr -> . unaryRelExpr
    (39) unaryRelExpr -> . NOT unaryRelExpr
    (40) unaryRelExpr -> . relExpr
    (41) relExpr -> . sumExpr relop sumExpr
    (42) relExpr -> . sumExpr
    (49) sumExpr -> . sumExpr sumop term
    (50) sumExpr -> . term
    (53) term -> . term mulop opElement
    (54) term -> . opElement
    (55) opElement -> . call
    (56) opElement -> . NUMBER
    (24) call -> . NAME
    (25) call -> . NAME POINT call
    (26) call -> . NAME LPARENT RPARENT
    (27) call -> . NAME LPARENT params RPARENT
    (28) call -> . call POINT call

    NOT             shift and go to state 27
    NUMBER          shift and go to state 32
    NAME            shift and go to state 46

    simpleExpr                     shift and go to state 47
    andExpr                        shift and go to state 23
    unaryRelExpr                   shift and go to state 26
    relExpr                        shift and go to state 28
    sumExpr                        shift and go to state 29
    term                           shift and go to state 30
    opElement                      shift and go to state 31
    call                           shift and go to state 45

state 19

    (33) returnStmt -> RETURN .
    (34) returnStmt -> RETURN . simpleExpr
    (35) simpleExpr -> . simpleExpr OR andExpr
    (36) simpleExpr -> . andExpr
    (37) andExpr -> . andExpr AND unaryRelExpr
    (38) andExpr -> . unaryRelExpr
    (39) unaryRelExpr -> . NOT unaryRelExpr
    (40) unaryRelExpr -> . relExpr
    (41) relExpr -> . sumExpr relop sumExpr
    (42) relExpr -> . sumExpr
    (49) sumExpr -> . sumExpr sumop term
    (50) sumExpr -> . term
    (53) term -> . term mulop opElement
    (54) term -> . opElement
    (55) opElement -> . call
    (56) opElement -> . NUMBER
    (24) call -> . NAME
    (25) call -> . NAME POINT call
    (26) call -> . NAME LPARENT RPARENT
    (27) call -> . NAME LPARENT params RPARENT
    (28) call -> . call POINT call

    SEMCOL          reduce using rule 33 (returnStmt -> RETURN .)
    NOT             shift and go to state 27
    NUMBER          shift and go to state 32
    NAME            shift and go to state 46

    simpleExpr                     shift and go to state 48
    andExpr                        shift and go to state 23
    unaryRelExpr                   shift and go to state 26
    relExpr                        shift and go to state 28
    sumExpr                        shift and go to state 29
    term                           shift and go to state 30
    opElement                      shift and go to state 31
    call                           shift and go to state 45

state 20

    (59) inputStmt -> INPUT . LPARENT RPARENT

    LPARENT         shift and go to state 49


state 21

    (60) outputStmt -> PRINT . LPARENT STRING RPARENT
    (61) outputStmt -> PRINT . LPARENT NAME RPARENT

    LPARENT         shift and go to state 50


state 22

    (62) commentLine -> LINE_COMMENT .

    NAME            reduce using rule 62 (commentLine -> LINE_COMMENT .)
    IF              reduce using rule 62 (commentLine -> LINE_COMMENT .)
    WHILE           reduce using rule 62 (commentLine -> LINE_COMMENT .)
    RETURN          reduce using rule 62 (commentLine -> LINE_COMMENT .)
    INPUT           reduce using rule 62 (commentLine -> LINE_COMMENT .)
    PRINT           reduce using rule 62 (commentLine -> LINE_COMMENT .)
    LINE_COMMENT    reduce using rule 62 (commentLine -> LINE_COMMENT .)
    DEF             reduce using rule 62 (commentLine -> LINE_COMMENT .)
    CLASS           reduce using rule 62 (commentLine -> LINE_COMMENT .)
    NOT             reduce using rule 62 (commentLine -> LINE_COMMENT .)
    NUMBER          reduce using rule 62 (commentLine -> LINE_COMMENT .)
    $end            reduce using rule 62 (commentLine -> LINE_COMMENT .)
    ELSE            reduce using rule 62 (commentLine -> LINE_COMMENT .)


state 23

    (36) simpleExpr -> andExpr .
    (37) andExpr -> andExpr . AND unaryRelExpr

    OR              reduce using rule 36 (simpleExpr -> andExpr .)
    NAME            reduce using rule 36 (simpleExpr -> andExpr .)
    IF              reduce using rule 36 (simpleExpr -> andExpr .)
    WHILE           reduce using rule 36 (simpleExpr -> andExpr .)
    RETURN          reduce using rule 36 (simpleExpr -> andExpr .)
    INPUT           reduce using rule 36 (simpleExpr -> andExpr .)
    PRINT           reduce using rule 36 (simpleExpr -> andExpr .)
    LINE_COMMENT    reduce using rule 36 (simpleExpr -> andExpr .)
    DEF             reduce using rule 36 (simpleExpr -> andExpr .)
    CLASS           reduce using rule 36 (simpleExpr -> andExpr .)
    NOT             reduce using rule 36 (simpleExpr -> andExpr .)
    NUMBER          reduce using rule 36 (simpleExpr -> andExpr .)
    $end            reduce using rule 36 (simpleExpr -> andExpr .)
    ELSE            reduce using rule 36 (simpleExpr -> andExpr .)
    COL             reduce using rule 36 (simpleExpr -> andExpr .)
    SEMCOL          reduce using rule 36 (simpleExpr -> andExpr .)
    AND             shift and go to state 51


state 24

    (18) funcDeclar -> DEF . NAME LPARENT RPARENT COL suite
    (19) funcDeclar -> DEF . NAME LPARENT params RPARENT COL suite

    NAME            shift and go to state 52


state 25

    (23) objDeclar -> CLASS . NAME COL suite

    NAME            shift and go to state 53


state 26

    (38) andExpr -> unaryRelExpr .

    AND             reduce using rule 38 (andExpr -> unaryRelExpr .)
    OR              reduce using rule 38 (andExpr -> unaryRelExpr .)
    NAME            reduce using rule 38 (andExpr -> unaryRelExpr .)
    IF              reduce using rule 38 (andExpr -> unaryRelExpr .)
    WHILE           reduce using rule 38 (andExpr -> unaryRelExpr .)
    RETURN          reduce using rule 38 (andExpr -> unaryRelExpr .)
    INPUT           reduce using rule 38 (andExpr -> unaryRelExpr .)
    PRINT           reduce using rule 38 (andExpr -> unaryRelExpr .)
    LINE_COMMENT    reduce using rule 38 (andExpr -> unaryRelExpr .)
    DEF             reduce using rule 38 (andExpr -> unaryRelExpr .)
    CLASS           reduce using rule 38 (andExpr -> unaryRelExpr .)
    NOT             reduce using rule 38 (andExpr -> unaryRelExpr .)
    NUMBER          reduce using rule 38 (andExpr -> unaryRelExpr .)
    $end            reduce using rule 38 (andExpr -> unaryRelExpr .)
    ELSE            reduce using rule 38 (andExpr -> unaryRelExpr .)
    COL             reduce using rule 38 (andExpr -> unaryRelExpr .)
    SEMCOL          reduce using rule 38 (andExpr -> unaryRelExpr .)


state 27
